--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.32.8' # deine lokale Version
+     - name: Setup Flutter
+  	uses: subosito/flutter-action@v2
+  	with:
+    	  flutter-version: '3.32.8' # <-- Deine exakte Version
+
 
       - name: Install dependencies
         run: flutter pub get
