--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,11 @@ jobs:
         uses: actions/checkout@v4
 
      - name: Setup Flutter
-  	uses: subosito/flutter-action@v2
-  	with:
-    	  flutter-version: '3.32.8' # <-- Deine exakte Version
+  uses: subosito/flutter-action@v2
+  with:
+    flutter-version: '3.32.8'  # Deine lokale Version
+    channel: 'stable'
+
 
 
       - name: Install dependencies
