--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -1,24 +1,35 @@
-name: Flutter CI
+name: Deploy Flutter Web to GitHub Pages
 
 on:
   push:
-  pull_request:
+    branches: [ main ]
+
+concurrency:
+  group: pages-deploy
+  cancel-in-progress: true
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
-      - run: flutter --version
-      - run: flutter pub get
-      - run: flutter analyze
-      - run: flutter test
-      - run: flutter build web --release
-      - name: Upload Web Artifact
-        uses: actions/upload-artifact@v4
+          flutter-version: '3.32.8'   # <- exakt deine Version
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Build Flutter Web (with base href for GitHub Pages)
+        run: flutter build web --release --base-href /lucid/
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          name: web-build
-          path: build/web
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build/web
+          publish_branch: gh-pages
+          force_orphan: true
