--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,16 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   flutter_markdown: ^0.6.18
+  flutter_svg: ^2.0.10+1
   http: ^1.2.1
   path_provider: ^2.1.3
   url_launcher: ^6.2.5
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.5.3
   web_socket_channel: ^2.4.0
   just_audio: ^0.9.39
   workmanager: ^0.5.2
   background_fetch: ^1.2.1
-  share_plus: ^10.0.2
+  share_plus: ^10.0.0
   google_fonts: ^6.3.0
 
 dev_dependencies:
@@ -29,7 +30,11 @@ dev_dependencies:
 
 flutter:
   uses-material-design: false
+
   assets:
+    - assets/icons/              # Bottom-Nav SVGs
+    - assets/slider/             # Header-Slider-Bilder (3:2)
+    - assets/logo/logo-signet.svg
     - assets/brand/hero_bg.webp
     - assets/wissen/grundlagen_de.md
     - assets/wissen/klartraum_grundlagen_de.md
@@ -56,3 +61,16 @@ flutter:
     - assets/wissen_en/citations_en.md
     - assets/quizzes/techniken_de.json
     - assets/checklists/pre_night_de.json
+
+  # Optional, aber empfohlen: DM Sans lokal einbetten (passt zu allowRuntimeFetching=false)
+  fonts:
+    - family: DM Sans
+      fonts:
+        - asset: assets/fonts/DMSans-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/DMSans-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/DMSans-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/DMSans-Bold.ttf
+          weight: 700
