chore: deploy web via GH Pages

--- a/assets/traumreisen/manifest.json
+++ b/assets/traumreisen/manifest.json
@@ -41,7 +41,7 @@
     },
     {
       "id": "lapland",
-      "title": "Tropischer Regenwald",
+      "title": "Nordlichter Lappland",
       "subtitle": "Morgenlicht & Tropfgrün",
       "image": "assets/traumreisen/images/nordlichter.jpg",
       "audio": "assets/traumreisen/audio/Nordlichter-Lappland.mp3"
