chore: deploy web via GH Pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ flutter:
     - assets/meditations/manifest.json
     - assets/meditations/tracks/
     - assets/meditations/covers/
+    - assets/audio/cues/
+    - assets/meditations/
 
 
 
