--- a/assets/meditations/manifest.json
+++ b/assets/meditations/manifest.json
@@ -12,7 +12,8 @@
 { "id": "aurora-crown", "title": "Aurora Crown",  "category": "Cosmic • Drone",        "asset": "assets/meditations/tracks/Aurora-Crown.mp3", "cover": "assets/meditations/covers/Aurora-Crown.jpg" }
 { "id": "fairy-forest", "title": "Fairy Forest",  "category": "Forest • Soft",        "asset": "assets/meditations/tracks/Fairy-Forest.mp3", "cover": "assets/meditations/covers/Fairy-Forest.jpg" }
 { "id": "harp-of-the-evergreen", "title": "Harp of the Evergreen",  "category": "Forest • Soft",        "asset": "assets/meditations/tracks/Harp-of-the-Evergreen01.mp3", "cover": "assets/meditations/covers/Harp-of-the-Evergreen.jpg" }
+{ "id": "harp-of-the-evergreen2", "title": "Harp of the Evergreen",  "category": "Forest • Soft",        "asset": "assets/meditations/tracks/Harp-of-the-Evergreen02.mp3", "cover": "assets/meditations/covers/Harp-of-the-Evergreen.jpg" }
 { "id": "sky-islands", "title": "Sky Islands",  "category": "Forest • Soft",        "asset": "assets/meditations/tracks/Sky-Islands-Glide01.mp3", "cover": "assets/meditations/covers/Sky-Islands.jpg" }
-{ "id": "sky-islands", "title": "Sky Islands 2",  "category": "Forest • Soft",        "asset": "assets/meditations/tracks/Sky-Islands-Glide02.mp3", "cover": "assets/meditations/covers/Sky-Islands.jpg" }
+{ "id": "sky-islands2", "title": "Sky Islands 2",  "category": "Forest • Soft",        "asset": "assets/meditations/tracks/Sky-Islands-Glide02.mp3", "cover": "assets/meditations/covers/Sky-Islands.jpg" }
   ]
 }
