--- a/assets/assets/slider/manifest.json
+++ b/assets/assets/slider/manifest.json
@@ -3,7 +3,7 @@
     {
       "type": "image",
       "asset": "assets/slider/auroraband-gruen-blau-ueber-bergen.webp",
-      "title": "Aurora über Bergen",
+      "title": "Test Aurora über Bergen",
       "subtitle": "Sanfte REM-Cues & neue Sounds"
     },
     {
