--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -3,75 +3,70 @@
   "assets/icons/wissen.svg": ["assets/icons/wissen.svg"],
   "assets/icons/research.svg": ["assets/icons/research.svg"],
   "assets/icons/feed.svg": ["assets/icons/feed.svg"],
+  "assets/logo/logo-signet.svg": ["assets/logo/logo-signet.svg"],
+  "assets/logo/logo-text.svg": ["assets/logo/logo-text.svg"],
 
+  "assets/slider/manifest.json": ["assets/slider/manifest.json"],
   "assets/slider/slide1.jpg": ["assets/slider/slide1.jpg"],
 
+  "assets/brand/hero_bg.webp": ["assets/brand/hero_bg.webp"],
+
+  "assets/fonts/DMSans-Light.ttf": ["assets/fonts/DMSans-Light.ttf"],
   "assets/fonts/DMSans-Regular.ttf": ["assets/fonts/DMSans-Regular.ttf"],
   "assets/fonts/DMSans-Medium.ttf": ["assets/fonts/DMSans-Medium.ttf"],
   "assets/fonts/DMSans-SemiBold.ttf": ["assets/fonts/DMSans-SemiBold.ttf"],
   "assets/fonts/DMSans-Bold.ttf": ["assets/fonts/DMSans-Bold.ttf"],
-  "assets/fonts/DMSans-Light.ttf": ["assets/fonts/DMSans-Light.ttf"],
 
-  "assets/logo/logo-signet.svg": ["assets/logo/logo-signet.svg"],
-  "assets/logo/logo-text.svg": ["assets/logo/logo-text.svg"],
-  "assets/brand/hero_bg.webp": ["assets/brand/hero_bg.webp"],
+  "packages/cupertino_icons/assets/CupertinoIcons.ttf": ["packages/cupertino_icons/assets/CupertinoIcons.ttf"],
 
-  "assets/meditations/manifest.json": ["assets/meditations/manifest.json"],
+  "assets/AssetManifest.json": ["assets/AssetManifest.json"],
+  "assets/FontManifest.json": ["assets/FontManifest.json"],
+  "assets/NOTICES": ["assets/NOTICES"],
 
-  // ---------- Soundscapes / Tracks ----------
+  /* ---------- Soundscapes: Tracks ---------- */
   "assets/meditations/tracks/Arcane-Library.mp3": ["assets/meditations/tracks/Arcane-Library.mp3"],
-  "assets/meditations/covers/Arcane-Library.jpg": ["assets/meditations/covers/Arcane-Library.jpg"],
-
   "assets/meditations/tracks/Aurora-Crown.mp3": ["assets/meditations/tracks/Aurora-Crown.mp3"],
-  "assets/meditations/covers/Aurora-Crown.jpg": ["assets/meditations/covers/Aurora-Crown.jpg"],
-
   "assets/meditations/tracks/Fairy-Forest.mp3": ["assets/meditations/tracks/Fairy-Forest.mp3"],
-  "assets/meditations/covers/Fairy-Forest.jpg": ["assets/meditations/covers/Fairy-Forest.jpg"],
-
   "assets/meditations/tracks/Harp-of-the-Evergreen01.mp3": ["assets/meditations/tracks/Harp-of-the-Evergreen01.mp3"],
-  "assets/meditations/covers/Harp-of-the-Evergreen01.jpg": ["assets/meditations/covers/Harp-of-the-Evergreen01.jpg"],
-
   "assets/meditations/tracks/Harp-of-the-Evergreen02.mp3": ["assets/meditations/tracks/Harp-of-the-Evergreen02.mp3"],
-  "assets/meditations/covers/Harp-of-the-Evergreen02.jpg": ["assets/meditations/covers/Harp-of-the-Evergreen02.jpg"],
-
   "assets/meditations/tracks/Sky-Islands-Glide01.mp3": ["assets/meditations/tracks/Sky-Islands-Glide01.mp3"],
-  "assets/meditations/covers/Sky-Islands.jpg": ["assets/meditations/covers/Sky-Islands.jpg"],
-
   "assets/meditations/tracks/Sky-Islands-Glide02.mp3": ["assets/meditations/tracks/Sky-Islands-Glide02.mp3"],
-
   "assets/meditations/tracks/Space.mp3": ["assets/meditations/tracks/Space.mp3"],
-  "assets/meditations/covers/Space.jpg": ["assets/meditations/covers/Space.jpg"],
-
   "assets/meditations/tracks/handpan-drift.mp3": ["assets/meditations/tracks/handpan-drift.mp3"],
-  "assets/meditations/covers/handpan-drift.jpg": ["assets/meditations/covers/handpan-drift.jpg"],
-
   "assets/meditations/tracks/highlands.mp3": ["assets/meditations/tracks/highlands.mp3"],
-  "assets/meditations/covers/highlands.jpg": ["assets/meditations/covers/highlands.jpg"],
-
   "assets/meditations/tracks/misty-horizons.mp3": ["assets/meditations/tracks/misty-horizons.mp3"],
-  "assets/meditations/covers/misty-horizons.jpg": ["assets/meditations/covers/misty-horizons.jpg"],
-
   "assets/meditations/tracks/moonlit-fjord.mp3": ["assets/meditations/tracks/moonlit-fjord.mp3"],
-  "assets/meditations/covers/moonlit-fjord.jpg": ["assets/meditations/covers/moonlit-fjord.jpg"],
-
   "assets/meditations/tracks/oceanic-breath.mp3": ["assets/meditations/tracks/oceanic-breath.mp3"],
-  "assets/meditations/covers/oceanic-breath.jpg": ["assets/meditations/covers/oceanic-breath.jpg"],
-
   "assets/meditations/tracks/tropic.mp3": ["assets/meditations/tracks/tropic.mp3"],
-  "assets/meditations/covers/tropic.jpg": ["assets/meditations/covers/tropic.jpg"],
-
   "assets/meditations/tracks/woodland-breathing.mp3": ["assets/meditations/tracks/woodland-breathing.mp3"],
+
+  /* ---------- Soundscapes: Cover ---------- */
+  "assets/meditations/covers/Arcane-Library.jpg": ["assets/meditations/covers/Arcane-Library.jpg"],
+  "assets/meditations/covers/Aurora-Crown.jpg": ["assets/meditations/covers/Aurora-Crown.jpg"],
+  "assets/meditations/covers/Fairy-Forest.jpg": ["assets/meditations/covers/Fairy-Forest.jpg"],
+  "assets/meditations/covers/Harp-of-the-Evergreen.jpg": ["assets/meditations/covers/Harp-of-the-Evergreen.jpg"],
+  "assets/meditations/covers/Sky-Islands.jpg": ["assets/meditations/covers/Sky-Islands.jpg"],
+  "assets/meditations/covers/Space.jpg": ["assets/meditations/covers/Space.jpg"],
+  "assets/meditations/covers/handpan-drift.jpg": ["assets/meditations/covers/handpan-drift.jpg"],
+  "assets/meditations/covers/highlands.jpg": ["assets/meditations/covers/highlands.jpg"],
+  "assets/meditations/covers/misty-horizons.jpg": ["assets/meditations/covers/misty-horizons.jpg"],
+  "assets/meditations/covers/moonlit-fjord.jpg": ["assets/meditations/covers/moonlit-fjord.jpg"],
+  "assets/meditations/covers/oceanic-breath.jpg": ["assets/meditations/covers/oceanic-breath.jpg"],
+  "assets/meditations/covers/tropic.jpg": ["assets/meditations/covers/tropic.jpg"],
   "assets/meditations/covers/woodland-breathing.jpg": ["assets/meditations/covers/woodland-breathing.jpg"],
 
-  // ---------- Affirmationen ----------
+  /* ---------- Affirmationen ---------- */
+  "assets/audio/affirmations/alternative-sicht.mp3": ["assets/audio/affirmations/alternative-sicht.mp3"],
   "assets/audio/affirmations/eigenes-tempo.mp3": ["assets/audio/affirmations/eigenes-tempo.mp3"],
   "assets/audio/affirmations/ein-gedanke-ist-kein-befehl.mp3": ["assets/audio/affirmations/ein-gedanke-ist-kein-befehl.mp3"],
+  "assets/audio/affirmations/ein-kleiner-machbarer-schritt.mp3": ["assets/audio/affirmations/ein-kleiner-machbarer-schritt.mp3"],
+  "assets/audio/affirmations/eine-sache-fuer-die-ich-dankbar-bin.mp3": ["assets/audio/affirmations/eine-sache-fuer-die-ich-dankbar-bin.mp3"],
+  "assets/audio/affirmations/faehigkeiten-wachsen.mp3": ["assets/audio/affirmations/faehigkeiten-wachsen.mp3"],
   "assets/audio/affirmations/hier-und-jetzt-sicher.mp3": ["assets/audio/affirmations/hier-und-jetzt-sicher.mp3"],
-  "assets/audio/affirmations/alternative-sicht.mp3": ["assets/audio/affirmations/alternative-sicht.mp3"],
   "assets/audio/affirmations/hilfe-annehmen.mp3": ["assets/audio/affirmations/hilfe-annehmen.mp3"],
-  "assets/audio/affirmations/ich-bin-genug.mp3": ["assets/audio/affirmations/ich-bin-genug.mp3"],
   "assets/audio/affirmations/ich-bin-belastbar.mp3": ["assets/audio/affirmations/ich-bin-belastbar.mp3"],
   "assets/audio/affirmations/ich-bin-dankbar.mp3": ["assets/audio/affirmations/ich-bin-dankbar.mp3"],
+  "assets/audio/affirmations/ich-bin-genug.mp3": ["assets/audio/affirmations/ich-bin-genug.mp3"],
   "assets/audio/affirmations/ich-bin-was-ich-daraus-mache.mp3": ["assets/audio/affirmations/ich-bin-was-ich-daraus-mache.mp3"],
   "assets/audio/affirmations/ich-darf-mich-beruhigen.mp3": ["assets/audio/affirmations/ich-darf-mich-beruhigen.mp3"],
   "assets/audio/affirmations/ich-erkenne-meine-staerken.mp3": ["assets/audio/affirmations/ich-erkenne-meine-staerken.mp3"],
@@ -82,11 +77,11 @@
   "assets/audio/affirmations/ich-mache-pausen.mp3": ["assets/audio/affirmations/ich-mache-pausen.mp3"],
   "assets/audio/affirmations/ich-muss-das-nicht-allein-schaffen.mp3": ["assets/audio/affirmations/ich-muss-das-nicht-allein-schaffen.mp3"],
   "assets/audio/affirmations/ich-richte-meine-energie.mp3": ["assets/audio/affirmations/ich-richte-meine-energie.mp3"],
-  "assets/audio/affirmations/ich-trenne-Fakten.mp3": ["assets/audio/affirmations/ich-trenne-Fakten.mp3"],
+  "assets/audio/affirmations/ich-trenne-fakten.mp3": ["assets/audio/affirmations/ich-trenne-fakten.mp3"],
   "assets/audio/affirmations/ich-uebe-selbstmitgefuehl.mp3": ["assets/audio/affirmations/ich-uebe-selbstmitgefuehl.mp3"],
   "assets/audio/affirmations/ich-waehle-klare-grenzen.mp3": ["assets/audio/affirmations/ich-waehle-klare-grenzen.mp3"],
   "assets/audio/affirmations/jederzeit-pause.mp3": ["assets/audio/affirmations/jederzeit-pause.mp3"],
-  "assets/audio/affirmations/klare-Grenzen.mp3": ["assets/audio/affirmations/klare-Grenzen.mp3"],
+  "assets/audio/affirmations/klare-grenzen.mp3": ["assets/audio/affirmations/klare-grenzen.mp3"],
   "assets/audio/affirmations/kleine-gute-entscheidungen.mp3": ["assets/audio/affirmations/kleine-gute-entscheidungen.mp3"],
   "assets/audio/affirmations/lernen-verbessern.mp3": ["assets/audio/affirmations/lernen-verbessern.mp3"],
   "assets/audio/affirmations/machbarer-schritt.mp3": ["assets/audio/affirmations/machbarer-schritt.mp3"],
