--- a/assets/meditations/manifest.json
+++ b/assets/meditations/manifest.json
@@ -1,7 +1,7 @@
 [
   {
     "id": "arcane-library",
-    "name": "Arcane Library",
+    "title": "Arcane Library",
     "category": "Atmosphäre",
     "minutes": 10,
     "asset": "assets/meditations/tracks/Arcane-Library.mp3",
@@ -9,7 +9,7 @@
   },
   {
     "id": "aurora-crown",
-    "name": "Aurora Crown",
+    "title": "Aurora Crown",
     "category": "Atmosphäre",
     "minutes": 10,
     "asset": "assets/meditations/tracks/Aurora-Crown.mp3",
@@ -17,7 +17,7 @@
   },
   {
     "id": "fairy-forest",
-    "name": "Fairy Forest",
+    "title": "Fairy Forest",
     "category": "Natur",
     "minutes": 10,
     "asset": "assets/meditations/tracks/Fairy-Forest.mp3",
@@ -25,7 +25,7 @@
   },
   {
     "id": "harp-of-the-evergreen-01",
-    "name": "Harp of the Evergreen 01",
+    "title": "Harp of the Evergreen 01",
     "category": "Harp",
     "minutes": 10,
     "asset": "assets/meditations/tracks/Harp-of-the-Evergreen01.mp3",
@@ -33,7 +33,7 @@
   },
   {
     "id": "harp-of-the-evergreen-02",
-    "name": "Harp of the Evergreen 02",
+    "title": "Harp of the Evergreen 02",
     "category": "Harp",
     "minutes": 10,
     "asset": "assets/meditations/tracks/Harp-of-the-Evergreen02.mp3",
@@ -41,7 +41,7 @@
   },
   {
     "id": "sky-islands-glide-01",
-    "name": "Sky Islands Glide 01",
+    "title": "Sky Islands Glide 01",
     "category": "Ambient",
     "minutes": 10,
     "asset": "assets/meditations/tracks/Sky-Islands-Glide01.mp3",
@@ -49,7 +49,7 @@
   },
   {
     "id": "sky-islands-glide-02",
-    "name": "Sky Islands Glide 02",
+    "title": "Sky Islands Glide 02",
     "category": "Ambient",
     "minutes": 10,
     "asset": "assets/meditations/tracks/Sky-Islands-Glide02.mp3",
@@ -57,7 +57,7 @@
   },
   {
     "id": "space",
-    "name": "Space",
+    "title": "Space",
     "category": "Atmosphäre",
     "minutes": 10,
     "asset": "assets/meditations/tracks/Space.mp3",
@@ -65,7 +65,7 @@
   },
   {
     "id": "handpan-drift",
-    "name": "Handpan Drift",
+    "title": "Handpan Drift",
     "category": "Handpan",
     "minutes": 10,
     "asset": "assets/meditations/tracks/handpan-drift.mp3",
@@ -73,7 +73,7 @@
   },
   {
     "id": "highlands",
-    "name": "Highlands",
+    "title": "Highlands",
     "category": "Natur",
     "minutes": 10,
     "asset": "assets/meditations/tracks/highlands.mp3",
@@ -81,7 +81,7 @@
   },
   {
     "id": "misty-horizons",
-    "name": "Misty Horizons",
+    "title": "Misty Horizons",
     "category": "Ambient",
     "minutes": 10,
     "asset": "assets/meditations/tracks/misty-horizons.mp3",
@@ -89,7 +89,7 @@
   },
   {
     "id": "moonlit-fjord",
-    "name": "Moonlit Fjord",
+    "title": "Moonlit Fjord",
     "category": "Wasser",
     "minutes": 10,
     "asset": "assets/meditations/tracks/moonlit-fjord.mp3",
@@ -97,7 +97,7 @@
   },
   {
     "id": "oceanic-breath",
-    "name": "Oceanic Breath",
+    "title": "Oceanic Breath",
     "category": "Wasser",
     "minutes": 10,
     "asset": "assets/meditations/tracks/oceanic-breath.mp3",
@@ -105,7 +105,7 @@
   },
   {
     "id": "tropic",
-    "name": "Tropic",
+    "title": "Tropic",
     "category": "Natur",
     "minutes": 10,
     "asset": "assets/meditations/tracks/tropic.mp3",
@@ -113,7 +113,7 @@
   },
   {
     "id": "woodland-breathing",
-    "name": "Woodland Breathing",
+    "title": "Woodland Breathing",
     "category": "Natur",
     "minutes": 10,
     "asset": "assets/meditations/tracks/woodland-breathing.mp3",
