--- a/assets/assets/traumreisen/manifest.json
+++ b/assets/assets/traumreisen/manifest.json
@@ -1,5 +1,14 @@
 {
   "items": [
+        {
+      "id": "hypnose",
+      "title": "Hypnose für luzide Träume",
+      "subtitle": "Hypnose für intensiveres, bewusstes Träumen.",
+      "image": "assets/traumreisen/images/all.jpg",
+      "audio": "assets/traumreisen/audio/Traumreise.mp3",
+      "durationSec": 1400,
+      "tags": ["fokus", "lucidity"]
+    },
     {
       "id": "all",
       "title": "Abenteuerreise ins All",
