fix(wissen): Build-Fehler behoben (Import entfernt, e_→e); Wissen-Accordion aktiv

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
     - assets/wissen_en/glossary_en.md
     - assets/wissen_en/citations_en.md
     - assets/wissen/
+    - assets/wissen_en/
 
     # Traumreisen
     - assets/traumreisen/
